# custom-data-management-cnc-

./: CMakeLists.txt  README.md
apps/ide/: CMakeLists.txt  main.cpp  main_window.cpp  project_manager.cpp  viewport_widget.cpp
apps/simulator/: CMakeLists.txt  cli_runner.cpp  main.cpp
core/: CMakeLists.txt
core/cam/: strategy.cpp  toolpath.cpp
core/common/: CoordinateFrame.h  Determinism.h  Error.h  Time.h  Types.h  Units.h  config.cpp  logger.cpp
core/gcode/: generator.cpp  parser.cpp
core/geometry/: TargetModel.h  ToolSweep.h  Transform.h  math_utils.cpp  mesh.cpp  voxel.cpp
core/machine/: Axis.h  AxisType.h  Cartesian3Axis.h  Machine.h  MachineKinematics.h  MachineValidator.h  MachineWithTool.h  Spindle.h  ToolChanger.h  ToolMount.h  WorkpieceMount.h  kinematics.cpp  machine.cpp
core/material/: MaterialGrid.h  Stock.h  material.cpp  stock.cpp
core/motion/: JogCommand.h  MotionController.h
core/planner/: Job.h  operation.cpp  planner.cpp
core/sim/: ISimulationEngine.h  SimulationEngineBase.h  SimulationState.h  StepController.h  StepResult.h
core/simulation/: collision.cpp  material_removal.cpp  simulator.cpp
core/tool/: Tool.h  ToolGeometry.h  ToolHolder.h  ToolType.h  tool.cpp  tool_library.cpp
core/tooling/: Tool.h  ToolGeometry.h  ToolHolder.h  ToolLibrary.h  ToolType.h  ToolValidator.h
core/toolpath/: MotionType.h  MoveType.h  Toolpath.h  ToolpathMove.h  ToolpathPoint.h  ToolpathSegment.h  ToolpathState.h  ToolpathValidator.h
core/workpiece/: StockDimensions.h  StockType.h  WorkOffset.h  Workpiece.h
gui/: CMakeLists.txt  main_window.cpp  main_window.h
plugins/: CMakeLists.txt  plugin_interface.cpp
render/: CMakeLists.txt  mesh_renderer.cpp  renderer.cpp  shader.cpp  viewport.cpp
rendering/: CMakeLists.txt  gl_viewport.cpp  gl_viewport.h
src/render/: AxisRenderer.cpp  AxisRenderer.h  Camera.cpp  Camera.h  GridRenderer.cpp  GridRenderer.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Viewport3DWidget.cpp  Viewport3DWidget.h
src/ui/: ConsoleDock.cpp  ConsoleDock.h  ProjectDock.cpp  ProjectDock.h  PropertiesDock.cpp  PropertiesDock.h
tests/: CMakeLists.txt
