# Unit & Integration Tests

# TODO: Add testing framework (Google Test, Catch2, etc.)
# find_package(GTest REQUIRED)

# Example test structure:
# add_executable(test_core
#     core/test_machine.cpp
#     core/test_toolpath.cpp
# )
# target_link_libraries(test_core
#     cnc_core
#     GTest::gtest
#     GTest::gtest_main
# )
# add_test(NAME CoreTests COMMAND test_core)
